for URLs to chunntquet.xyz

--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -270,6 +270,89 @@
     "for user_id in bot.type_instances():\n",
     "    print(\"https://{}.pythonanywhere.com/{}/{}/chat\".format(pythonanywhere_username, type_id, user_id))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate URLs to Group One (Bot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&0ee24106-7d51-4f5d-b303-1494660bc5d8\n",
+      "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&200a0956-463d-4871-9719-e5fc29edc7cb\n",
+      "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&30a1cbc8-8323-4304-b557-203c5c9ec558\n",
+      "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&439dda3f-fc8b-452d-8d28-bd0bbbaad52b\n",
+      "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&483c7eaa-ca78-4b19-87a9-50780a6e7e6b\n",
+      "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&7b1ff4af-5202-4020-a28e-534ea9d141e8\n",
+      "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&81f10d45-b1a6-4bd3-a2b1-0973d7eed535\n",
+      "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&bd45891e-ef89-4616-ae0a-b186367ea70c\n",
+      "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&c00762e1-2039-41b3-93f2-2cf2d4fb3a07\n",
+      "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&d7a84fcc-1c23-47c0-a955-e89cf1d467c0\n",
+      "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&e8950cdc-4d5a-4412-b3f1-f9f7357609b7\n",
+      "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&ff3098a3-86e2-45a2-95d4-4e33ceb8768e\n"
+     ]
+    }
+   ],
+   "source": [
+    "type_id = \"db4dfab7-0cf9-4916-adb2-5fdafb038070\"\n",
+    "bot = Chatbot(\n",
+    "    database_file=\"database/chatbot.db\", \n",
+    "    type_id=type_id,\n",
+    "    user_id=user_ids[0]\n",
+    ")\n",
+    "\n",
+    "for user_id in bot.type_instances():\n",
+    "    print(\"https://a4e5bcd8.chunntguet.xyz/be82d478/?{}&{}\".format(type_id, user_id))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate URLs to Group Two (Wegleitung)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://a4e5bcd8.chunntguet.xyz/c579fe2b/?db4dfab7-0cf9-4916-adb2-5fdafb038070&22031724-88d3-4ca7-b4e5-0b0065035bae\n",
+      "https://a4e5bcd8.chunntguet.xyz/c579fe2b/?db4dfab7-0cf9-4916-adb2-5fdafb038070&e55384b9-4528-472e-8fb0-e16478d9c18a\n",
+      "https://a4e5bcd8.chunntguet.xyz/c579fe2b/?db4dfab7-0cf9-4916-adb2-5fdafb038070&a3b1d4a8-b31f-4529-9b94-6a18dc7b1740\n",
+      "https://a4e5bcd8.chunntguet.xyz/c579fe2b/?db4dfab7-0cf9-4916-adb2-5fdafb038070&3ef0d4d1-2252-4e83-8f51-9f43fd4a6328\n",
+      "https://a4e5bcd8.chunntguet.xyz/c579fe2b/?db4dfab7-0cf9-4916-adb2-5fdafb038070&2cf2394d-e0bc-4bac-8d0c-0e007b7cfea3\n",
+      "https://a4e5bcd8.chunntguet.xyz/c579fe2b/?db4dfab7-0cf9-4916-adb2-5fdafb038070&fa01b43c-1227-42c3-8b7b-7c4ee943d19a\n",
+      "https://a4e5bcd8.chunntguet.xyz/c579fe2b/?db4dfab7-0cf9-4916-adb2-5fdafb038070&2ae6dbd1-bd71-4ae6-b439-c134e7e89e03\n",
+      "https://a4e5bcd8.chunntguet.xyz/c579fe2b/?db4dfab7-0cf9-4916-adb2-5fdafb038070&f586526e-f0fe-47c3-a30b-2c2ba0d7e5c9\n",
+      "https://a4e5bcd8.chunntguet.xyz/c579fe2b/?db4dfab7-0cf9-4916-adb2-5fdafb038070&15db2860-1b44-4f8d-85bd-e5b962527b7a\n",
+      "https://a4e5bcd8.chunntguet.xyz/c579fe2b/?db4dfab7-0cf9-4916-adb2-5fdafb038070&69cff13c-a4c3-450b-b3ee-bf26585bda74\n",
+      "https://a4e5bcd8.chunntguet.xyz/c579fe2b/?db4dfab7-0cf9-4916-adb2-5fdafb038070&ab5368a5-b2a3-48a0-8bfe-04077d87f7c5\n",
+      "https://a4e5bcd8.chunntguet.xyz/c579fe2b/?db4dfab7-0cf9-4916-adb2-5fdafb038070&aafdeb68-66be-41d8-afec-c015bb7fde63\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_of_urls = 12\n",
+    "type_id = \"db4dfab7-0cf9-4916-adb2-5fdafb038070\"\n",
+    "instance_ids = [str(uuid.uuid4()) for _ in range(number_of_urls)]\n",
+    "\n",
+    "for instance_id in instance_ids:\n",
+    "    print(\"https://a4e5bcd8.chunntguet.xyz/c579fe2b/?{}&{}\".format(type_id, instance_id))"
+   ]
   }
  ],
  "metadata": {
