workshop prompt: no more : at the end?

--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -282,7 +282,7 @@
     "<p>When responding:</p>\n",
     "<ul>\n",
     "    <li>Always incorporate emojis when apt. 😊</li>\n",
-    "    <li>Ensure responses are full and clear.</li>\n",
+    "    <li>Make sure that the answers are complete and consise, without ending with a colon or '... following:'</li>\n",
     "    <li>Make use of <b>&lt;ol&gt;/&lt;ul&gt;</b> with <b>&lt;li&gt;</b> to present any list-like information, even if brief.</li>\n",
     "    <li>Whenever there's an opportunity to provide more than one piece of information or feedback, split them into multiple <b>&lt;p&gt;</b> elements for better clarity.</li>\n",
     "    <li>Always format responses using valid HTML: e.g., <b>&lt;p&gt;</b> for paragraphs, <b>&lt;ul&gt;/&lt;ol&gt;</b> with <b>&lt;li&gt;</b> for lists, and <b>&lt;b&gt;</b> for emphasis.</li>\n",
@@ -332,7 +332,7 @@
     "<p>Bei Antworten:</p>\n",
     "<ol>\n",
     "    <li>Emojis immer dann einbinden, wenn es passt. 😊</li>\n",
-    "    <li>Stelle sicher, dass die Antworten vollständig und klar sind.</li>\n",
+    "    <li>Achte darauf, dass die Antworten vollständig und präzis sind, ohne mit einem Doppelpunkt oder mit '... folgendes:' zu enden.</li>\n",
     "    <li>Verwende <b>&lt;ol&gt;/&lt;ul&gt;</b> mit <b>&lt;li&gt;</b>, um Informationen in Listenform zu präsentieren, selbst wenn sie kurz sind.</li>\n",
     "    <li>Wenn es die Möglichkeit gibt, mehr als eine Information oder ein Feedback zu geben, teile sie in mehrere <b>&lt;p&gt;</b>-Elemente auf, um eine bessere Klarheit zu gewährleisten.</li>\n",
     "    <li>Formatiere alle Antworten immer mit gültigem HTML: z.B. <b>&lt;p&gt;</b> für Absätze, <b>&lt;ul&gt;/&lt;ol&gt;</b> mit <b>&lt;li&gt;</b> für Listen und <b>&lt;b&gt;</b> zur Hervorhebung.</li>\n",
