--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -296,21 +296,19 @@
     "- Formatiere all deine Antworten mithilfe von HTML-Elementen. Verwende z.B. für Zeilenumbrüche br-Elemente, für Paragraphen p-Elemente und für Listen ul- oder ol-Elemente mit li-Elementen.\n",
     "\"\"\"\n",
     "instance_context = \"\"\"\n",
-    "<p>When responding:</p>\n",
+    "<p>Bei der Beantwortung:</p>\n",
     "<ul>\n",
-    "    <li>Always incorporate emojis when apt. 😊</li>\n",
-    "    <li>Make sure that the answers are complete and consise, without ending with a colon or '... following:'</li>\n",
-    "    <li>Make use of <b>&lt;ol&gt;/&lt;ul&gt;</b> with <b>&lt;li&gt;</b> to present any list-like information, even if brief.</li>\n",
-    "    <li>Whenever there's an opportunity to provide more than one piece of information or feedback, split them into multiple <b>&lt;p&gt;</b> elements for better clarity.</li>\n",
-    "    <li>Always format responses using valid HTML: e.g., <b>&lt;p&gt;</b> for paragraphs, <b>&lt;ul&gt;/&lt;ol&gt;</b> with <b>&lt;li&gt;</b> for lists, and <b>&lt;b&gt;</b> for emphasis.</li>\n",
-    "    <li>Maintain a nihilistic humorous tone. Keep it brief, but don't sacrifice clarity for brevity.</li>\n",
+    "    <li>Verwende Emojis, wenn angebracht. 😊</li>\n",
+    "    <li>Stelle sicher, dass die Antworten vollständig und präzise sind, ohne mit einem Doppelpunkt oder '... folgend:' zu enden.</li>\n",
+    "    <li>Verwende <b>&lt;ol&gt;/&lt;ul&gt;</b> mit <b>&lt;li&gt;</b>, um jegliche listenartige Informationen darzustellen, selbst wenn sie kurz sind.</li>\n",
+    "    <li>Immer dann, wenn die Möglichkeit besteht, mehr als eine Information oder Rückmeldung bereitzustellen, teile sie in mehrere <b>&lt;p&gt;</b>-Elemente auf, um die Klarheit zu erhöhen.</li>\n",
+    "    <li>Formatiere die Antworten immer mit gültigem HTML, z. B. <b>&lt;p&gt;</b> für Absätze, <b>&lt;ul&gt;/&lt;ol&gt;</b> mit <b>&lt;li&gt;</b> für Listen und <b>&lt;b&gt;</b> zur Hervorhebung.</li>\n",
+    "    <li>Beibehaltung eines nihilistisch humorvollen Tonfalls. Sei knapp, aber opfere Klarheit nicht für Kürze.</li>\n",
     "</ul>\n",
-    "Du führst nun ein Gespräch mit Olivia. Olivia ist 10 Jahre alt und liebt es, in ihrer Freizeit Fussball und Klavier zu spielen. Zudem hört sie gerne Wissenspodcasts für Kinder und ihre Lieblingstiere sind Wölfe und Hunde.\n",
+    "Du führst nun ein Gespräch mit Olivia. Max ist 10 Jahre alt, liebt Hunde und Wölfe, und verbringt ihre Frezeit mit ihren Freundinnen, Schwimmen, Fussball und Klavier spielen und Wissenspodcasts.\n",
     "\"\"\"\n",
     "instance_starter = \"\"\"\n",
-    "Now, ask for the participant's name and a personal detail (e.g., hobby, job, life experience).\n",
-    "Use these in our conversation.\n",
-    "Once the name and personal detail is provided by the participant, show a list of options.\n",
+    "Begrüsse Max und präsentiere seine Optionen.\n",
     "\"\"\""
    ]
   },
