--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -39,33 +39,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Google Colab Only: START\n",
-    "\n",
-    "You need a Google and Github account. Be prepared to authenticate yourself with both of these accounts."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git clone https://github.com/zhaw-iwi/singlestateconversation.git\n",
-    "%cd /content/singlestateconversation/\n",
-    "!pip install openai"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Google Colab Only: END"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -83,11 +56,11 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
    "source": [
-<<<<<<< HEAD
     "bot_type = \"\"\"\n",
     "Als achtsamer und respektvoller Coach unterstützt du Personen dabei, ihre Steuererklärung unter Berücksichtigung aller Regelungen auszufüllen. \n",
     "Du hilfst ihnen, die notwendigen Dokumente wie Lohnabrechnungen und Bankauszüge bereitzulegen und informierst sie präzise, welche Informationen \n",
@@ -131,42 +104,29 @@
     "Vermeide vollständige Anleitungen.\n",
     "Biete deine Hilfe an und warte auf konkrete Anfragen.\n",
     "\"\"\""
-=======
-    "In the following, we use the default type_name, type_role, instance_context, and instance_starter defined in the Chatbot class. Provide your own prompts instead."
->>>>>>> main
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
-<<<<<<< HEAD
     "    type_id=\"db4dfab7-0cf9-4916-adb2-5fdafb038070\",\n",
     "    user_id=\"e8950cdc-4d5a-4412-b3f1-f9f7357609b7\",\n",
     "    type_name=\"Tax Copilot\",\n",
     "    type_role=bot_type,\n",
     "    instance_context=bot_instance,\n",
     "    instance_starter=bot_starter\n",
-=======
-    "    type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
-    "    user_id=\"86f2177d-4462-4983-ace8-18a557c8db38\",\n",
-    "    type_name=Chatbot.default_type_name,\n",
-    "    type_role=Chatbot.default_type_role,\n",
-    "    instance_context=Chatbot.default_instance_context,\n",
-    "    instance_starter=Chatbot.default_instance_starter\n",
->>>>>>> main
     ")"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
-<<<<<<< HEAD
    "outputs": [
     {
      "name": "stdout",
@@ -176,40 +136,6 @@
      ]
     }
    ],
-=======
-   "source": [
-    "Optionally retrieve the complete conversation (held so far) or the bot information (type_role, instance_context, and instance_starter) as retrieved from the database. Both may be used to display that on a frontend."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bot = Chatbot(\n",
-    "    database_file=\"database/chatbot.db\", \n",
-    "    type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
-    "    user_id=\"86f2177d-4462-4983-ace8-18a557c8db38\"\n",
-    ")\n",
-    "print(bot.conversation_retrieve(with_system=True))\n",
-    "print(bot.info_retrieve())"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If the chatbot should start the conversation, have the greeting message be created here and stored in the database."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> main
    "source": [
     "print(bot.start())"
    ]
@@ -238,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,9 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-<<<<<<< HEAD
    "outputs": [
     {
      "name": "stdout",
@@ -274,12 +199,6 @@
    "source": [
     "# Amount of instances to be created\n",
     "number_of_instances = 11\n",
-=======
-   "outputs": [],
-   "source": [
-    "# Amount of instances to be created\n",
-    "number_of_instances = 1\n",
->>>>>>> main
     "\n",
     "# Change the following to a list of hardcoded instance IDs if you want to use existing users.\n",
     "user_ids = [str(uuid.uuid4()) for _ in range(number_of_instances)]\n",
@@ -289,15 +208,16 @@
     "for user_id in user_ids:\n",
     "    bot = Chatbot(\n",
     "        database_file=\"database/chatbot.db\", \n",
-    "        type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
+    "        type_id=\"db4dfab7-0cf9-4916-adb2-5fdafb038070\",\n",
     "        user_id=user_id,\n",
-    "        instance_context=Chatbot.default_instance_context,\n",
-    "        instance_starter=Chatbot.default_instance_starter\n",
+    "        instance_context=bot_instance,\n",
+    "        instance_starter=bot_starter\n",
     "    )\n",
     "    try:\n",
     "        # each bot should have a first message to the user\n",
     "        print(bot.start())\n",
-    "    except:\n",
+    "    except RuntimeError as error:\n",
+    "        print(error)\n",
     "        error_c += 1\n",
     "        continue\n",
     "    c+=1\n",
@@ -316,9 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-<<<<<<< HEAD
    "outputs": [
     {
      "name": "stdout",
@@ -339,12 +258,9 @@
      ]
     }
    ],
-=======
-   "outputs": [],
->>>>>>> main
    "source": [
-    "pythonanywhere_username = \"<ENTER YOUR PYTHONANYWHERE USERNAME HERE>\"\n",
-    "type_id = \"4b9e7b25-08d7-4031-b485-4741ecd48dd1\"\n",
+    "pythonanywhere_username = \"a4e5bcd8\"\n",
+    "type_id = \"db4dfab7-0cf9-4916-adb2-5fdafb038070\"\n",
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
     "    type_id=type_id,\n",
@@ -359,123 +275,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Complex Bot Behaviour: IQ Quest :-)"
+    "#### Generate URLs to Group One (Bot)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 10,
-=======
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type_role = \"\"\"\n",
-    "Puzzle Workshop\n",
-    "\n",
-    "You're a host of a puzzle-solving workshop. Engage in a conversation with a participant as they attempt the puzzles.\n",
-    "\n",
-    "Rules:\n",
-    "- Be on topic.\n",
-    "- Never reveal answers.\n",
-    "- Praise correct answers and notify wrong ones.\n",
-    "\n",
-    "Puzzles:\n",
-    "1. Game & in-app purchase: CHF 33. Game: CHF 30 more than purchase. Price of game?\n",
-    "2. 3 doctors take 3 minutes to vaccinate 3 patients. Time for 7 doctors, 7 patients?\n",
-    "3. Phone battery halves yearly. 1 hour at Year 7. When was it twice as much?\n",
-    "\n",
-    "Solutions (for checking, not for revealing):\n",
-    "1. CHF 31.50 (CHF 31.50 and CHF 1.50 add up to CHF 33 while the difference is CHF 30).\n",
-    "2. 3 minutes (each doctor takes 3 minutes to vaccinate 1 patient, so 7 doctors take 3 minutes to vaccinate 7 patients).\n",
-    "3. Year 6 (battery life was 2 hurs, halved to 1 hour on Year 7).\n",
-    "\n",
-    "Interaction Options:\n",
-    "1. Workshop Info\n",
-    "2. Get a Puzzle\n",
-    "3. Help after 2 wrong attempts.\n",
-    "4. Performance assessment if all puzzles solved.\n",
-    "\"\"\"\n",
-    "instance_context = \"\"\"\n",
-    "<p>When responding:</p>\n",
-    "<ul>\n",
-    "    <li>Always incorporate emojis when apt. 😊</li>\n",
-    "    <li>Make sure that the answers are complete and consise, without ending with a colon or '... following:'</li>\n",
-    "    <li>Make use of <b>&lt;ol&gt;/&lt;ul&gt;</b> with <b>&lt;li&gt;</b> to present any list-like information, even if brief.</li>\n",
-    "    <li>Whenever there's an opportunity to provide more than one piece of information or feedback, split them into multiple <b>&lt;p&gt;</b> elements for better clarity.</li>\n",
-    "    <li>Always format responses using valid HTML: e.g., <b>&lt;p&gt;</b> for paragraphs, <b>&lt;ul&gt;/&lt;ol&gt;</b> with <b>&lt;li&gt;</b> for lists, and <b>&lt;b&gt;</b> for emphasis.</li>\n",
-    "    <li>Maintain a nihilistic humorous tone. Keep it brief, but don't sacrifice clarity for brevity.</li>\n",
-    "</ul>\n",
-    "\"\"\"\n",
-    "instance_starter = \"\"\"\n",
-    "Now, ask for the participant's name and a personal detail (e.g., hobby, job, life experience).\n",
-    "Use these in our conversation.\n",
-    "Once the name and personal detail is provided by the participant, show a list of options.\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type_role = \"\"\"\n",
-    "Puzzle-Workshop\n",
-    "\n",
-    "Du bist ein Gastgeber eines Puzzle-Lösungs-Workshops. Führe eine Unterhaltung mit einer Person, während sie die Rätsel versucht.\n",
-    "\n",
-    "Regeln:\n",
-    "- Bleibe beim Thema.\n",
-    "- Gib niemals die Antworten preis.\n",
-    "- Lobe richtige Antworten und weise auf falsche hin.\n",
-    "\n",
-    "Rätsel:\n",
-    "- Game & In-App-Kauf: CHF 33. Game: CHF 30 mehr als In-App-Kauf. Preis vom Game?\n",
-    "- 3 Ärzte brauchen 3 Minuten um 3 Patienten zu impfen. Wie lange für 7 Ärzte, 7 Patienten?\n",
-    "- Handyakku halbiert sich jährlich. 1 Stunde im Jahr 7. Wann war es doppelt so viel?\n",
-    "\n",
-    "Lösungen (zur Überprüfung, nicht zur Offenlegung):\n",
-    "1. CHF 31.50 (CHF 31.50 und CHF 1.50 ergeben CHF 33, während der Unterschied CHF 30 beträgt).\n",
-    "2. 3 Minuten (jeder Arzt braucht 3 Minten, um einen Patient zu impfen, daher benötigen 7 Ärzte 3 Minuten, um 7 Patienten zu impfen).\n",
-    "3. Jahr 6 (Akkulaufzeit betrug 2 Stunden, halbiert auf 1 Stunde im Jahr 7).\n",
-    "\n",
-    "Interaktionsmöglichkeiten:\n",
-    "1. Workshop-Info\n",
-    "2. Ein Rätsel erhalten\n",
-    "3. Hilfe nach 2 falschen Versuchen.\n",
-    "4. Leistungsbeurteilung wenn alle Rätsel gelöst.\n",
-    "\"\"\"\n",
-    "instance_context = \"\"\"\n",
-    "<p>Bei Antworten:</p>\n",
-    "<ol>\n",
-    "    <li>Emojis immer dann einbinden, wenn es passt. 😊</li>\n",
-    "    <li>Achte darauf, dass die Antworten vollständig und präzis sind, ohne mit einem Doppelpunkt oder mit '... folgendes:' zu enden.</li>\n",
-    "    <li>Verwende <b>&lt;ol&gt;/&lt;ul&gt;</b> mit <b>&lt;li&gt;</b>, um Informationen in Listenform zu präsentieren, selbst wenn sie kurz sind.</li>\n",
-    "    <li>Wenn es die Möglichkeit gibt, mehr als eine Information oder ein Feedback zu geben, teile sie in mehrere <b>&lt;p&gt;</b>-Elemente auf, um eine bessere Klarheit zu gewährleisten.</li>\n",
-    "    <li>Formatiere alle Antworten immer mit gültigem HTML: z.B. <b>&lt;p&gt;</b> für Absätze, <b>&lt;ul&gt;/&lt;ol&gt;</b> mit <b>&lt;li&gt;</b> für Listen und <b>&lt;b&gt;</b> zur Hervorhebung.</li>\n",
-    "    <li>Halte einen nihilistischen humorvollen Ton bei. Halte es kurz, aber opfere nicht die Klarheit für Kürze.</li>\n",
-    "</ol>\n",
-    "\"\"\"\n",
-    "instance_starter = \"\"\"\n",
-    "Jetzt, frage nach dem Namen und einem persönlichen Detail (z.B. Hobby, Beruf, Lebenserfahrung).\n",
-    "Verwende diese im geschlechtsneutralem Gespräch in Du-Form.\n",
-    "Sobald ein Name und persönliches Detail bekannt ist, zeige eine Liste von Optionen.\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
->>>>>>> main
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&1cbb6381-e993-4207-ae71-1803c6c7a594\n",
       "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&31f438d8-ab91-4af3-9e50-7fe13958bd97\n",
       "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&36451f74-d024-469f-b28d-4e66aa9266a3\n",
@@ -488,23 +299,16 @@
       "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&de9136e8-383f-4455-ba4d-0a2a5da0c375\n",
       "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&e8950cdc-4d5a-4412-b3f1-f9f7357609b7\n",
       "https://a4e5bcd8.chunntguet.xyz/be82d478/?db4dfab7-0cf9-4916-adb2-5fdafb038070&fc51cb59-af7d-4859-baf2-74835e6beaa4\n"
-=======
-      "['<p>Willkommen beim Puzzle-Lösungs-Workshop! 😊 Ich freue mich, dich hier zu sehen. Bevor wir anfangen, erzähl mir bitte etwas über dich. Wie heißt du und was ist ein Hobby oder Beruf, der dich besonders erfüllt?</p>']\n"
->>>>>>> main
      ]
     }
    ],
    "source": [
+    "type_id = \"db4dfab7-0cf9-4916-adb2-5fdafb038070\"\n",
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
-    "    type_id=\"0750df12\",\n",
-    "    user_id=\"46bb71a1f17c\",\n",
-    "    type_name=\"Puzzle Workshop\",\n",
-    "    type_role=type_role,\n",
-    "    instance_context=instance_context,\n",
-    "    instance_starter=instance_starter\n",
+    "    type_id=type_id,\n",
+    "    user_id=user_ids[0]\n",
     ")\n",
-<<<<<<< HEAD
     "\n",
     "for user_id in bot.type_instances():\n",
     "    print(\"https://a4e5bcd8.chunntguet.xyz/be82d478/?{}&{}\".format(type_id, user_id))"
@@ -548,9 +352,6 @@
     "\n",
     "for instance_id in instance_ids:\n",
     "    print(\"https://a4e5bcd8.chunntguet.xyz/c579fe2b/?{}&{}\".format(type_id, instance_id))"
-=======
-    "print(bot.start())"
->>>>>>> main
    ]
   }
  ],
@@ -570,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
