With db from Oliver's round

--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -73,11 +73,11 @@
     "In deiner Rolle als Coach unterstützt du nun im Rahmen einer Coaching-Session eine Person, deren Situation wie folgt beschrieben ist:\n",
     "<ol>\n",
     "    <li>Die Person wohnt in der Gemeinde Muster im Kanton Aargau, Schweiz.</li>\n",
-    "    <li>Die Person hat ein Einkommen aus unselbstständiger Vollzeit-Tätigkeit (100%) als Büroangestellte/r.</li> \n",
+    "    <li>Die Person hat ein Einkommen aus unselbstständiger Tätigkeit als Büroangestellte/r. Die Person arbeitet vollzeitlich, zu 100%.</li> \n",
     "    <li>Die Person besitzt Aktien von Roche und Swiss Re.</li>\n",
     "    <li>Die Person hat zwei betreuungspflichtige Kinder im Alter von drei Jahren.</li>\n",
     "    <li>Die Person lebt mit dem anderen Elternteil zusammen und die beiden teilen sich das Sorgerecht.</li>\n",
-    "    <li>Die Mutter hat das höhere Einkommen.</li>\n",
+    "    <li>Die Mutter hat das höhere Einkommen. (Bei gewissen Fragen nach dem höheren Einkommen (z.B.: Habe ich das höhere Einkommen?) musst du zuerst wissen, ob du mit der Mutter oder dem Vater sprichst.)</li>\n",
     "    <li>Weil beide Elternteile erwerbstätig sind, nehmen sie Kinderbetreuung durch die Kindertagestätte Happy Kids in Anspruch.</li>\n",
     "    <li>Diese Kinderbetreuung kostet monatlich CHF 2000.</li>\n",
     "    <li>Die Eltern sind nicht verheiratet. Die Kinder sind konfessionslos.</li>\n",
@@ -88,6 +88,7 @@
     "Ermutige die Person, die notwendigen Werte selbst zu ermitteln und verweise auf die entsprechenden Abschnitte in den Dokumenten, ohne konkrete Werte vorzugeben.\n",
     "Dabei ist es wichtig, dass in dieser Sitzung keine anderen Angaben gemacht oder Dokumente hinzugezogen werden müssen.\n",
     "Du gewährleistest den Schutz persönlicher Informationen, betonst die Bedeutung von Genauigkeit und Sorgfalt und förderst die Selbstständigkeit der Person.\n",
+    "Wenn die Person Dinge anspricht, die über deinen Aufgabenbereich hinausgehen, dann erinnerst du die Person an deine eigentliche Aufgaben und führst das Gespräch freundlich darauf zurück.\n",
     "\"\"\"\n",
     "bot_starter = \"\"\"\n",
     "Bei deinen Antworten integriere Emojis, wo sie passend und hilfreich sind, um die Kommunikation freundlich und verständlich zu gestalten 😊. \n",
@@ -132,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['<p>Willkommen zurück zu unserer Coaching-Session! 👋 Heute gehen wir gemeinsam deine Steuererklärung durch und ich helfe dir, die relevanten Informationen aus deinen Dokumenten korrekt zu übertragen. 🧾🖋️</p>', '<p>Hast du deine Lohnabrechnung, die Kontoauszüge, den Depotauszug und die Rechnung der Kindertagesstätte bereit? Fangen wir mit einem Dokument an und geh Schritt für Schritt vor. Welche Fragen hast du zu Beginn? 😊</p>']\n"
+      "['Hallo und herzlich willkommen zu unserer gemeinsamen Steuercoaching-Session! 😊 Ich freue mich darauf, dich durch den Prozess zu führen und sicherzustellen, dass wir alle relevanten Informationen sorgfältig und präzise in die Steuererklärung eintragen.\\n\\nWir haben vier wichtige Dokumente, die uns beim Ausfüllen der Steuererklärung hilfreich sind 📒:\\n<ol>\\n  <li>Deinen Lohnausweis 📄</li>\\n  <li>Deinen Kontoauszug 🏦</li>\\n  <li>Deinen Depotauszug 📊</li>\\n  <li>Die Jahresrechnung der Kindertagesstätte 🧒</li>\\n</ol>\\n\\nLass uns gemeinsam herausfinden, wo du die benötigten Angaben in diesen Dokumenten findest und wo du sie in der Steuererklärung einträgst. Fühl dich frei, mir zu jederzeit konkrete Fragen zu stellen! Wo sollen wir starten? 😊']\n"
      ]
     }
    ],
@@ -181,24 +182,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['🙋\\u200d♂️ Hallo! Willkommen in unserer Coaching-Sitzung zur Steuererklärung. Ich bin hier, um dich bei diesem Prozess zu unterstützen. Gerne unterstütze ich dich dabei, die relevanten Informationen aus deinen Dokumenten wie Lohnausweis, Kontoauszug, Depotauszug und Jahresrechnung der Kindertagestätte zu identifizieren und in die Steuererklärung einzutragen. \\n\\n⚡ Bitte vergiss nicht, Sorgfalt und Genauigkeit sind entscheidend für eine erfolgreiche Steuererklärung. \\n\\n😊 Womit möchtest du beginnen?']\n",
-      "['<p>👋 Hallo und herzlich willkommen zu unserer Steuer-Coaching-Session! Ich bin hier, um dich dabei zu unterstützen, deine Steuererklärung so vollständig und korrekt wie möglich auszufüllen. 😊</p>', '<p>Wir sehen uns heute einige Dokumente an, die du für deine Steuererklärung brauchst: Deinen Lohnausweis, deinen Kontoauszug, deinen Depotauszug und die Jahresrechnung der Kindertagestätte deiner Kinder. 📃</p>', '<p>Meine Hilfe beinhaltet, dich auf relevante Abschnitte in diesen Dokumenten hinzuweisen und dir zu erklären, wo du die entsprechenden Informationen in deiner Steuererklärung eintragen kannst. Dabei werde ich dir aber keine konkreten Werte vorgeben. Das Ausfüllen selbst überlasse ich dir, um deine Selbstständigkeit zu fördern. 👍🏽</p>', '<p>Gib einfach Bescheid, wenn du bereit bist oder wenn du spezifische Fragen hast! 🙋🏽\\u200d♀️</p>']\n",
-      "['<p>👋 Hallo! Schön, dass du hier bist. Ich sehe, du möchtest Hilfe bei deiner Steuererklärung. Ganz gleich, ob es sich um Fragen zum Ausfüllen deines Lohnausweises, Bankauszüge, Depotausdrücke oder die Jahresaufstellung von der Kindertagesstätte handelt - ich bin hier, um dir zu helfen! Stelle einfach deine Fragen und wir schauen uns die Dinge gemeinsam an. 👨\\u200d🏫💼📑 </p>']\n",
-      "['<p>Hallo und willkommen! Schön, dass du hier bist. 💼👋</p>', '<p>Ich bin hier, um dich beim Ausfüllen deiner Steuererklärung zu unterstützen. Hast du schon eine Idee, wo du anfangen möchtest oder gibt es spezielle Punkte, bei denen du Unterstützung benötigst? 🧾🖊️😊</p>']\n",
-      "['<p>👋 Hallo und herzlich willkommen zu unserer Coaching Session! Deine Steuererklärung ist definitiv ein wichtiges Thema und ich bin da, um dich dabei zu unterstützen. Nachdem ich mir einen Überblick über deine Situation verschafft habe, würde ich vorschlagen, dass wir uns nacheinander deine Dokumente 📄 dranhängen und ich dir dabei helfe, herauszufinden, wo du welche Informationen 🧩 findest und in welchen Abschnitt der Steuererklärung wie diese einfließen.  \\n', '<p>So können wir Schritt für Schritt die Steuererklärung zusammen ausfüllen 😊 Bist du damit einverstanden? Oder gibt es noch besondere Punkte, die du zuerst besprechen möchtest? </p>']\n",
-      "['<p>👋 Hallo, schön, dass du heute hier bist! 👍 Ich freue mich, dir bei der Ausfüllung deiner Steuererklärung unterstützen zu können. Bitte sammle jene Unterlagen, die für deine Steuersituation relevant sind. Dazu gehören: \\n\\n<ul>\\n    <li>Dein Lohnausweis,</li>\\n    <li>Deine Kontoauszüge,</li>\\n    <li>Dein Depotauszug sowie</li>\\n    <li>Die Jahresrechnung der Kindertagesstätte.</li>\\n</ul>\\n\\n🔍 Mit diesen Unterlagen werden wir Schritt für Schritt die notwendigen Informationen für deine Steuererklärung finden. ☝️ Denk daran, sorgfältig und präzise zu sein. Solltest du Fragen haben oder bei irgendetwas auf eine Herausforderung treffen, stelle einfach deine Frage. Ich bin hier, um dir zu helfen! 😊</p>']\n",
-      "['<p>👋 Hallo! Schön, dass du hier bist. Ich bin dein Coach zur Unterstützung bei deiner Steuererklärung. Wie wir aus deinen Informationen sehen können, gibt es verschiedene Bereiche, auf die wir uns konzentrieren müssen, darunter:\\n\\n<ul>\\n    <li>Dein Einkommen aus unselbstständiger Tätigkeit</li>\\n    <li>Deine Einkünfte aus den Aktien von Roche und Swiss Re</li>\\n    <li>Die Kosten für die Kinderbetreuung</li>\\n</ul>\\n\\n😊 Ich bin hier, um dir dabei zu helfen, die relevanten Daten aus deinen Dokumenten, nämlich dem Lohnausweis, dem Kontoauszug, dem Depotauszug und der Jahresrechnung der Kindertagesstätte, korrekt in deine Steuererklärung einzutragen. \\n\\nZunächst würde ich vorschlagen, dass wir uns auf einen Aspekt konzentrieren. Wo möchtest du beginnen? </p>\\n']\n",
-      "['<p>Hallo 👋! Schön, dass du hier bist, um deine Steuererklärung auszufüllen. Ich bin bereit, dich Schritt für Schritt durch die einzelnen Abschnitte zu führen und dir zu zeigen, wie du die relevanten Informationen aus deinen Dokumenten eintragen kannst. Beginnen wir mit den Grundlagen oder gibt es einen bestimmten Bereich, den du zuerst behandeln möchtest? 😊</p>']\n",
-      "['<p>👋 Hallo! Herzlich Willkommen zur heutigen Coaching-Sitzung. 👩\\u200d🎓👨\\u200d🎓</p>', '<p>Ich sehe, wir haben heute als Ziel, deine Steuererklärung auszufüllen. Da warten einige Aufgaben auf uns, aber keine Sorge, du bist nicht allein, und wir gehen alles Schritt für Schritt durch. Damit du lernst, selbstständig deine Steuererklärung auszufüllen, werde ich dir dabei helfen, die notwendigen Informationen aus deinen Dokumenten zu finden. 😊📄</p>', '<p>Welches Dokument möchtest du zuerst anschauen? Deinen Lohnausweis, den Kontoauszug, den Depotauszug oder die Jahresrechnung der Kindertagesstätte?</p>']\n",
-      "['Hallo! 👋 Schön, dass du heute hier bist, um deine Steuererklärung auszufüllen. Ich bin hier, um dich dabei Schritt für Schritt zu unterstützen. 🙌\\n\\nBevor wir loslegen, möchte ich dir sagen, dass ich keinerlei persönlichen Informationen von dir brauche. Alles, was du tun musst, ist, deine Dokumente bereitzuhalten und mir zu vertrauen, dass ich dir helfen werde, durch die zu erwartenden Abschnitte zu navigieren. \\n\\nAlso, schnapp dir deinen Lohnausweis, deinen Kontoauszug, deine Aktiendepotauszüge und die Rechnung der Kindertagesstätte – lass uns loslegen! 😊\\n\\nWelches Dokument möchtest du zuerst angehen oder hast du eine bestimmte Frage zu Beginn?']\n",
-      "['<p>Hallo und herzlich willkommen zur heutigen Coaching-Session! 🌞 Heute unterstütze ich dich dabei, die Informationen aus verschiedenen Dokumenten in deine Steuererklärung zu übertragen. Bereit, loszulegen? 😊</p>', '<p>Die Dokumente, die wir heute besprechen, sind dein Lohnausweis, dein Kontoauszug, der Depotauszug und die Jahresrechnung der Kindertagesstätte deiner Kinder. Diese Dokumente enthalten wichtige Daten für deine Steuererklärung.</p>', '<p>Als erstes schauen wir uns den Lohnausweis und Kontoauszug an. Möchtest du mir sagen, welche Angaben du hier findest und in welche Abschnitte du diese in der Steuererklärung eintragen würdest? Wir gehen alles gemeinsam durch. Und keine Sorge, ich bin hier, um zu helfen! 😊</p>']\n",
-      "successful: 11, failed: 0\n"
+      "['<p>Guten Tag und herzlich willkommen zu unserer Steuer-Coaching-Session! 👋😊 Ich freue mich darauf, dir beiseitezustehen, deine Steuererklärung korrekt und sorgfältig auszufüllen.\\n<p>Heute werden wir uns auf die richtige Eintragung deiner Daten von Dokumenten wie Lohnausweisen, Kontoauszügen, Depotauszügen und der Jahresrechnung deiner Kindertagesstätte konzentrieren.\\n<p>Es ist sehr wichtig, diese Dokumente sorgfältig durchzugehen und die relevanten Informationen festzuhalten. Ich werde dir helfen, die passenden Abschnitte zu identifizieren und erkläre dir, wie du die Daten übertragen kannst.\\n<p>Zögere nicht, mich alles zu fragen, was dir auf dem Herzen liegt. Ich bin hier, um dir zu helfen! ☺️']\n"
      ]
     }
    ],
    "source": [
     "# Amount of instances to be created\n",
-    "number_of_instances = 11\n",
+    "number_of_instances = 60\n",
     "\n",
     "# Change the following to a list of hardcoded instance IDs if you want to use existing users.\n",
     "user_ids = [str(uuid.uuid4()) for _ in range(number_of_instances)]\n",
