--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -286,9 +286,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/00f43a6b-84b5-4a6d-b89e-2679ce625dc9/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/01d75728-6256-4a7e-b0e6-bdf2a530e266/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/040befcd-7490-49d7-ab07-58a87aed754e/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/042480fc-e169-4dd1-b339-5c923a580f2f/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/07093ac8-d4b4-4028-9b9e-e606cc8aa6f4/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/077273e6-0c50-47e5-bc51-5082674347ba/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/0994d030-7c81-42b9-9e3e-c01a9edc6d3c/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/0b4103cf-8801-4d6a-8fe0-d844dbcc1856/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/14d5cf45-446b-40ab-a938-86b1a2b59ad1/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/194d8a8e-6efc-4db5-9323-3a53d194a369/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/195200f1-ce6d-4181-9f8b-2a8cca32e277/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/1ad8d9e6-2c54-46dc-a4f5-d8806e5b160f/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/1ee4ea02-44a0-4427-b889-c96a0f98dc33/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/1f8956ce-27be-4472-804e-a9c2f5cc5bdd/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/2519eafa-4224-4853-b128-8944d55b693a/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/2904c107-87e6-4d31-b827-83e5f675982f/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/298a006e-193a-418d-9f49-98f26e173597/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/2a3894c4-c582-4248-a3e0-a517563c898f/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/2b9acf3a-c4d7-4a8f-9480-83969889b58f/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/2da54053-1194-4ed0-87c7-ce4430b4922b/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/3595c95a-52f7-4127-96c6-59cd661a1475/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/3c9b72ab-5b42-4842-a076-c8b8857d4ac5/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/42387724-c6c5-4d88-a1e9-5c213e855ec7/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/4c378323-49e5-4116-b5ed-d78738f84a70/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/53489a9a-2eb5-4c13-b68d-65fd65d6bb05/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/53b4de2c-84cc-4a32-b499-d92f85bcbb91/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/6b88c509-8105-4450-964a-a0c60f02faed/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/6e49f40f-ad12-4667-b969-f251ca41d7e2/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/6e6e5a70-f7fc-4276-8b8d-5055e0927e4c/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/6e746990-5fe2-4a4e-8de8-78c657e678b1/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/6f45c048-9433-4997-9c22-63a604778716/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/77725f7b-44e4-4ec2-9378-c16855c0fba9/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/792b7f08-c6c4-4590-a46f-472b2ac909a2/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/7a5ea37b-61c1-4429-b573-e7accb1b1042/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/81298c43-3150-4942-ba85-69a96a7d746f/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/8dc338fc-9df5-4037-b318-2073f18b12e2/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/8dfcdf31-22e0-4bf0-ae14-984a9fd11da1/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/96dbf2c8-ae36-4e8b-80ca-cd5f42169665/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/9739c2e1-c31a-42c5-ae08-8249e6bb6eb7/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/9c562539-393b-423a-b584-ab6563a4b942/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/9f1e67bf-1e1a-4c9f-b5ec-7e9364eeec7d/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/a2b6a532-b973-43d0-85ad-5c600f4ad25d/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/a5eb5528-788e-4906-bb55-f5e6e4084f6c/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/b22aa6cf-6a53-4e38-8de8-878780d8ccfa/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/b348b695-b17f-4474-89b6-1792463cc7b3/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/b4f80954-0e91-4a96-b09a-d1c1b13817b2/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/c0897656-be34-434c-bae5-f6d891a66e18/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/c183f215-5bc2-492d-b5ce-836287e91a28/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/c3b532ac-3f12-4639-a5ce-a40fbf60d298/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/c49c19a1-ee89-46a8-a01a-e17f12e6681d/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/c4a41bd7-d03f-4099-a18b-0ddade0d875f/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/c4db31d7-cce5-4fca-92e4-62bd3edcb49a/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/c6b708c2-da94-4af8-a19a-bd5e157cf64f/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/cbb489ff-c691-4321-916d-1963b16936e4/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/cd271057-c526-431c-a746-c1ef47509851/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/d3a7567f-387f-48a6-a76b-000e04f4e468/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/d681df18-b01a-4bd6-933f-05b9df66d4b7/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/d91705de-9f2a-4ef3-b5be-bcf50b2b5a38/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/d99ef357-6320-4767-9b4e-502424e49cf3/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/d9e098d3-90ee-4152-a9dd-5aee4188c38a/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/da02f509-5082-4b6a-afc3-19ff57b226f7/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/de1be333-366d-4cd8-b9f8-d56fd56282a5/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/de93186e-3c8a-4796-8463-31d140ab2968/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/e8950cdc-4d5a-4412-b3f1-f9f7357609b7/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/e8aaaa6f-19fc-40c3-8f37-b147375840e5/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/e9d48e1c-2172-47af-8efb-862ae9cce5d0/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/ee2b0b7f-196a-477e-8099-eb17d1405670/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/ee63d6f4-8507-476e-acba-e655b508e58e/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/f17747c8-0fd4-4df5-a0e9-0430812d5b3f/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/f5ee30fe-1533-42f4-baf0-3d04af3e0a67/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/f8e481ea-53eb-4f37-b249-5e803d569f2c/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/fa4bd471-5006-4b91-830a-7fa415eafbb4/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/fa87baac-ea79-4b1c-88f6-27fecb394078/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/fdb30aeb-b320-4a83-9a07-ede4a7383bfa/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/fe8214c6-9271-4623-a469-d5544fa80532/chat\n"
+     ]
+    }
+   ],
    "source": [
     "pythonanywhere_username = \"a4e5bcd8\"\n",
     "type_id = \"db4dfab7-0cf9-4916-adb2-5fdafb038070\"\n",
